 ! Minor change or bugfix. (don't bother to log typos except between releases.)
 * Change like above, but affects templates.
 & Change that affects a language file. (make two if it affects templates too.)
 + Feature addition or improvement.
 - Feature or option removal.
 % Development flag or note, such as branching.


Pretty URLs 0.8.5                                                  ?
================================================================================
 ! Base: Allow pretty URLs to be verified. (Security.php)

Pretty URLs 0.8.4                                                  16 June, 2008
================================================================================
 ! Base: Replace cached URLs in 2.0. (QueryString.php)
 % Base: Now compatible with TinyPortal 1.0.5.
 ! Topics: Topics about unions are now fine. (PrettyUrls-Filters.php)
 ! Boards/Topics: Make it easier for other mods by checking $_REQUEST['pretty'] rather than $_GET. (QueryString.php)
 % Base: Updated for SMF 2.0 Beta 4 Public.

Pretty URLs 0.8.3                                                    9 May, 2008
================================================================================
 ! Boards/Topics: $_GET['pretty'] needs to be unset with the new SEO changes in SMF 2. (QueryString.php)
 ! Boards/Topics: Fix $_REQUEST for silly mods that don't check $board/$topic. (Display.php, MessageIndex.php, QueryString.php)
 % Base: Updated for SMF 2.0 Beta 3.1 Public.

Pretty URLs 0.8.2                                                  9 April, 2008
================================================================================
 % Branched off 0.8 so that changes for 2.0 support won't get confused with everything else.
 ! Base: Some colour changes were needed for dark themes. (chrome.css)
 - Base: Removed the cache table's log_time column as it's not used anymore.
 ! Base: Some futher changes for 2.0 Beta 3 support were required.
